--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
    "id": "27061981",
    "metadata": {},
    "source": [
-    "## İmport Libraries ##"
+    "## Import Libraries ##"
    ]
   },
   {
